...
        <string name="tab_friends">Friends</string>
        <string name="tab_received_requests">Received requests</string>
        <string name="tab_sent_requests">Sent requests</string>

        <!-- DIALOG   -->
        <string name="add_friend_title">Add a friend</string>
        <string name="add_friend_request">Request</string>
        <string name="cancel">Cancel</string>
        <string name="add_friend_email_hint">Enter your friend\'s email</string>
        <string name="add_own_as_friend">You can\'t add yourself as a friend :-)</string>
        <string name="add_friend_request_sent">Friend request sent to \</string>

        <!--  FRIEND ITEM  -->
        <string name="remove_friend">Unfriend</string>

        <!--  FRIEND REQUEST ITEM  -->
...
    <string name="delete_account_text">Are you sure you want to delete your account ? This action is irreversible</string>
    <string name="delete_account_yes">Yes</string>


    <!--  EMERGENCIES  -->

    <string name="emergency_ask_for_help">Ask for help</string>
    <string name="you_can_report_an_emergency_here">You can report an emergency here :</string>
    <string name="declare_an_emergency">Declare an emergency</string>
    <string name="describe_emergency">Describe your emergency</string>
    <string name="submit_emergency">Submit</string>
    <string name="emergency_sent_message">Emergency message sent, please wait in case you requested assistance</string>
    <string name="emergency_fill_message">Please give us more information</string>
    <string name="emergency_numbers_title">Emergency numbers (click to call)</string>
    <string name="emergency_information_title">Emergency instructions</string>


...
