<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout_friend_requests"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/recycler_view_friend_requests"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/recycler_view_margin"
            android:layout_marginRight="@dimen/recycler_view_margin"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/item_friend_request" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
