<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_emergency_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/edit_text_emergency_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:hint="@string/describe_emergency"
        android:textSize="18sp"
        android:inputType="text"
        android:importantForAutofill="no" />

</LinearLayout>